Create `Homework4`